[package]
name = "utpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "5.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_with = "1.0"
colored = "2.0"
toml = { version = "0.7.5", features = ["display"] }
inquire = "0.6.2"
semver = { version = "1.0.18", features = ["serde"] }
spdx = "0.10.2"
clap = { version = "4.4.2", features = ["derive"] }

[[bin]]
name = "utpm"
path = "src/main.rs"
